--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,50 +1,376 @@
+$ac-color: #fd33bd
+$w-color: #fff
+$dop-color: rgba(255, 255, 255, .3)
+$text-color: rgba(#000, 0.9)
+//Lobster, Comfort, Marmelad - bottom te,
+//  Merriweather, MerriweatherBold - good,
+//  Pattaya, RobotoSlabBold - good, RobotoSlab,
+//  Rubik, Ruso - alay good, TenorSans, Yanone, YanoneBold, Yeseva - good
 *
   margin: 0
   padding: 0
   box-sizing: border-box
+  font-family: Marmelad
+a
+  list-style: none
+  text-decoration: none
+  color: inherit
+
+h1
+  font-size: 64px
+  color: $ac-color
+  line-height: 1.4
+  opacity: 0
+  max-width: 1170px
+  margin-bottom: 50px
+  font-family: MerriweatherBold
+  text-transform: uppercase
+h2
+  text-transform: uppercase
+  font-family: MerriweatherBold
+p
+  font-family: Marmelad
+.posr
+  position: relative
+
 body
   height: 100vh
   width: 100vw
   overflow: hidden
-  font-family: Oswald
-
+  font-weight: 100
+nav
+  position: fixed
+  border-radius: 0 50% 50% 0
+  overflow: hidden
+  left: -200px
+  z-index: 10
+  height: 100%
+  width: auto
+  display: flex
+  justify-content: flex-end
+  align-items: center
+  opacity: 0
+  background-color: rgba(255, 255, 255, 0.16)
+  color: $w-color
+  transition: 0.3s ease-in-out
+  &.active
+    opacity: 1
+    left: 0
+.nav
+  list-style: none
+  display: flex
+  align-items: center
+  flex-direction: column
+  width: 100%
+  .item.active
+    //background-color: $ac-color
+  .item
+    left: -50px
+    padding: 20px 45px 20px 35px
+    line-height: 0.8
+    text-transform: uppercase
+    font-size: 14px
+    position: relative
+    //transition: border 0.15s ease-in-out
+    width: 100%
+    cursor: pointer
+    z-index: 2
+    &:after
+      position: absolute
+      content: ''
+      bottom: 0
+      left: 0
+      width: 0
+      z-index: -1
+      height: 100%
+      transition: 0.15s ease-in-out
+      background-color: rgba($ac-color, 0.6)
+      box-shadow: inset 0 0 3px rgba(0, 0, 0,.2)
+    &:hover
+      color: #fff
+      &:after
+        width: 100%
+    //&:hover
+    //  color: $ac-color
+.logoNav
+  padding-bottom: 20px
+  position: relative
+  svg
+    height: 35px
+.cont
+  max-width: 1170px
+  margin: 0 auto
 .one, .two, .three
   display: flex
   align-items: center
   justify-content: center
   font-size: 33px
+  z-index: 2
+  position: relative
   width: 100vw
   height: 100vh
+.bgBottom
+  background-color: #fafafa
+  position: relative
+.clipBgBottom
+  width: 100%
+  height: 100%
+  position: absolute
+  z-index: 1
+  background-image: url(../img/SVG/svgBg.svg)
+  background-repeat: no-repeat
+
 .one
   background-color: #fafafa
-.two
-  background-color: green
-.three
-  background-color: red
 .navScroll
   position: fixed
   top: 50%
   right: 30px
-  transform: translateY(-50%)
+  //right: 0
   display: flex
   flex-direction: column
   cursor: pointer
-  z-index: 2
-  > div.active
+  z-index: 10
+  .scrollClick.active
     position: relative
-    &:after
-      position: absolute
-      content: ''
-      top: 50%
-      rigth: -10px
-      height: 2px
-      width: 30px
-      background-color: red
-  > div
-    &:hover
-      box-shadow: 0 0px 3px rgba(0,0,0,.05)
-    border-radius: 50%
+    //font-size: 18px
+    background-color: $ac-color
+  .scrollClick
+    color: $w-color
+    transition: 0.5s ease-in-out
+    font-size: 12px
     line-height: 0.8
-    padding: 20px 22px
-    margin: 10px
-    background-color: #fff
+    padding: 10px 12px
+    &:hover
+      background-color: $ac-color
+.scrollBox
+  font-size: 0
+  > div
+    font-size: 18px
+    display: flex
+.absolutNavRight
+  position: absolute
+  content: ''
+  //top: 50%
+  right: -15px
+  height: 2px
+  width: 20px
+  background-color: red
+.rightDotsBox
+  box-shadow: inset 0 0 3px rgba(#000, 0.1)
+  position: relative
+  background-color: rgba(#000, .1)
+  border-radius: 5px
+  overflow: hidden
+  //transform: translateY(33.3%);
+
+.linkHome
+  position: absolute
+  top: 20px
+  transition-duration: 0.5s
+  //font-family: RobotoSlab
+  right: 40px
+  font-size: 24px
+  color: $w-color
+  z-index: 10
+
+//SLIDER
+
+#carouselHome
+  width: 100vw
+  position: relative
+  overflow: hidden
+  height: 100vh
+  display: inline-block
+.carouselItem
+  width: 100vw
+  position: absolute
+  top: 0
+  left: 0
+  //opacity: 0
+  &:nth-child(3)
+    z-index: 1
+  > img
+    object-fit: cover
+    width: 100vw
+    height: 100vh
+.carouselDots
+  z-index: 10
+  position: absolute
+  top: 30px
+  left: 50%
+  transform: translateX(-50%)
+  display: flex
+.carouselDotItem
+  &.active
+    div
+      background-color: #fff
+  > div
+    box-shadow: 0 0 3px rgba(#000, 0.5)
+    width: 10px
+    height: 10px
+    border-radius: 50%
+    background-color: rgba(#fff, 0.3)
+    cursor: pointer
+    margin: 5px
+  &:hover
+    div
+      background-color: rgba(#fff, 0.6)
+.carouselText
+  padding-bottom: 100px
+  position: absolute
+  display: flex
+  height: 100%
+  width: 100%
+  align-items: flex-start
+  padding-left: 15%
+  flex-direction: column
+  justify-content: center
+  background: rgba(0,0,0,.8)
+  p
+    position: relative
+    opacity: 0
+    font-size: 28px
+    padding: 0 30px 10px 0px
+    text-shadow: 0 1px 3px rgba(#000, 0.4)
+    color: #fff
+.carouselItem.active .carouselText
+    h1
+      position: relative
+      animation: animationHeaderText 0.5s cubic-bezier(0,.73,.47,1) 1s forwards
+    p
+      animation: animationHeaderBText 0.5s cubic-bezier(0,.73,.47,1) 1.5s forwards
+@keyframes animationHeaderText
+  0%
+    top: -100px
+    opacity: 0
+  100%
+    top: 0
+    opacity: 1
+
+@keyframes animationHeaderBText
+  0%
+    left: -100px
+    opacity: 0
+  100%
+    left: 0
+    opacity: 1
+
+
+// HAMBURGER
+input
+  display: none
+label
+  display: block
+  cursor: pointer
+  position: absolute
+  width: 100%
+  height: 100%
+  top: -5px
+  path
+    fill: none
+    stroke: $ac-color
+    stroke-width: 3
+    stroke-linecap: round
+    stroke-linejoin: round
+    --length: 24
+    --offset: -38
+    stroke-dasharray: var(--length) var(--total-length)
+    stroke-dashoffset: var(--offset)
+    transition: all .8s cubic-bezier(.645, .045, .355, 1)
+.cross input:checked+svg
+  .line--1,
+  .line--3
+    --length: 22.62741699
+  .line--2
+    --length: 0
+.menu--1
+  position: fixed
+  top: 0
+  z-index: 11
+  left: 0
+  width: 80px
+  height: 80px
+  .line--1,
+  .line--3
+    --total-length: 126.64183044433594
+  .line--2
+    --total-length: 70
+  input:checked+svg
+    .line--1,
+    .line--3
+      --offset: -94.1149185097
+    .line--2
+      --offset: -50
+
+// arrowDown
+.headerScrollBottom
+  width: 30px
+  position: absolute
+  bottom: 30px
+  left: 50%
+  transform: translateX(-50%)
+  z-index: 10
+
+.arrows path
+  stroke: $ac-color
+  fill: transparent
+  stroke-width: 5px
+  &:first-child
+    animation: arrow1 2s infinite
+  &:nth-child(2)
+    animation: arrow2 2s infinite
+  &:last-child
+    animation: arrow3 2s infinite
+
+@keyframes arrow1
+  0%
+    opacity: 0
+  25%
+    opacity: 1
+  50%, 100%
+    opacity: 0
+@keyframes arrow2
+  0%, 35%
+    opacity: 0
+  35%
+    opacity: 1
+  45%, 100%
+    opacity: 0
+@keyframes arrow3
+  0%, 50%
+    opacity: 0
+  50%
+    opacity: 1
+  65%, 100%
+    opacity: 0
+.linkHome
+  display: flex
+  align-items: center
+  a
+    display: flex
+    align-items: center
+.svgInst, .svgVk
+  margin-left: 10px
+  fill: $ac-color
+  path
+    stroke-width: 3
+  &:hover
+    path
+      animation: instAnim 0.5s ease-in-out
+.svgInst
+  margin-left: 20px
+@keyframes instAnim
+  0%
+    fill: $ac-color
+  50%
+    fill: $w-color
+  100%
+    fill: $ac-color
+
+
+
+
+
+
+@import fonts
