--- a/sass/main.sass
+++ b/sass/main.sass
@@ -421,6 +421,96 @@ label
     fill: $ac-color
 
 
+// PHOTO
+
+.photoPackage
+  display: flex
+  overflow: hidden
+  height: 100vh
+  width: 100vw
+  .itemPhoto
+    width: 100%
+    height: 100%
+    position: absolute
+    top: 0
+    left: 0
+    transition: 1s ease
+    .smallBox
+      position: relative
+      .contentPhoto
+        background-color: rgba(0,0,0,0)
+        transition: 1s ease
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        z-index: 2
+        h2
+          opacity: 1
+          margin-top: 100px
+          margin-bottom: 50px
+          width: auto
+          max-width: none
+          text-align: center
+          color: #ffffff
+        p
+          transition: 0.5s ease 1s
+          position: relative
+          color: #fff
+          opacity: 0
+          top: -300px
+    img
+      transition: 0.5s ease
+      transform: translateX(-50%)
+    &.active
+      z-index: 2
+      .smallBox
+        position: relative
+        .contentPhoto
+          position: absolute
+          top: 0
+          left: 0
+          width: 100%
+          height: 100%
+          z-index: 2
+          background-color: rgba(0,0,0,.8)
+          p
+            max-width: 1000px
+            opacity: 1
+            top: 0
+
+.default
+  clip-path: polygon(0 100%, 16.5% 100%, 16.5% 0, 0 0)
+  p
+    margin-left: 4.5%
+    text-align: right
+  &.active
+    .smallBox
+      .contentPhoto
+        background-color: rgba(0, 99, 10, 0.8) !important
+    img
+      transform: translateX(-30%)
+.premium
+  clip-path: polygon(33.3% 100%, 66.6% 100%, 66.6% 0, 33.3% 0)
+  p
+    margin: 0 auto
+    text-align: center
+  &.active
+.gold
+  clip-path: polygon(83.25% 100%, 100% 100%, 100% 0, 83.25% 0)
+  h2
+    margin-left: -220px
+  p
+    margin-left: 41%
+  img
+    transform: translateX(50%) !important
+  &.active
+    .smallBox
+      .contentPhoto
+        background-color: rgba(84, 0, 2, 0.9) !important
+    img
+      transform: translateX(30%) !important
 
 
 
