--- a/sass/main.sass
+++ b/sass/main.sass
@@ -456,6 +456,7 @@ label
           color: #ffffff
         p
           transition: 0.5s ease 1s
+          max-width: 1000px
           position: relative
           color: #fff
           opacity: 0
@@ -476,7 +477,6 @@ label
           z-index: 2
           background-color: rgba(0,0,0,.8)
           p
-            max-width: 1000px
             opacity: 1
             top: 0
 
@@ -511,9 +511,29 @@ label
         background-color: rgba(84, 0, 2, 0.9) !important
     img
       transform: translateX(30%) !important
-
-
-
+.arrowBoxPhoto
+  position: absolute
+  width: 100%
+  height: 0
+  top: 90%
+  > div
+    position: relative
+    width: 100%
+.arrowLeftLeft, .arrowLeft, .arrowRightRight, .arrowRight
+  z-index: 1
+  opacity: 0
+  font-size: 50px
+  color: #fff
+  transform: translateY(-50%)
+  position: absolute
+.arrowLeftLeft
+  left: 270px
+.arrowLeft
+  left: 590px
+.arrowRightRight
+  right: 270px
+.arrowRight
+  right: 590px
 
 @import fonts
 @import media
