--- a/sass/main.sass
+++ b/sass/main.sass
@@ -522,10 +522,14 @@ label
 .arrowLeftLeft, .arrowLeft, .arrowRightRight, .arrowRight
   z-index: 1
   opacity: 0
+  transition: 0.5s ease
   font-size: 50px
   color: #fff
   transform: translateY(-50%)
   position: absolute
+  &.active
+    opacity: 1
+    z-index: 3
 .arrowLeftLeft
   left: 270px
 .arrowLeft
