--- a/sass/main.sass
+++ b/sass/main.sass
@@ -7,6 +7,23 @@ $text-color: rgba(#000, 0.9)
 //  Merriweather, MerriweatherBold - good,
 //  Pattaya, RobotoSlabBold - good, RobotoSlab,
 //  Rubik, Ruso - alay good, TenorSans, Yanone, YanoneBold, Yeseva - good
+
+// CUSTOM SCROLL
+::-webkit-scrollbar
+  width: 3px
+
+/* Track */
+::-webkit-scrollbar-track
+  background: #000
+
+/* Handle */
+::-webkit-scrollbar-thumb
+  background: $ac-color
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover
+  background: $ac-color
+
 *
   margin: 0
   padding: 0
@@ -42,7 +59,7 @@ p
   position: relative
 .carouseItemBox
   height: 100vh
-body
+#home
   height: 100vh
   width: 100vw
   overflow: hidden
@@ -253,6 +270,7 @@ nav
     color: #fff
 .linkTo
   position: relative
+  z-index: -1
   padding: 10px 40px
   border-radius: 5px
   opacity: 0
@@ -297,8 +315,10 @@ nav
   0%
     bottom: -50px
     opacity: 0
+    z-index: 0
   100%
     bottom: 0
+    z-index: 3
     opacity: 1
 
 @keyframes hoverAnimation
@@ -307,6 +327,11 @@ nav
   100%
     box-shadow: 0 0 0 10px rgba($ac-color, 0)
 
+@keyframes hoverAnimation2
+  0%
+    box-shadow: 0 0 0 0px rgba($ac-color2, 0.8)
+  100%
+    box-shadow: 0 0 0 10px rgba($ac-color2, 0)
 
 // HAMBURGER
 input
@@ -427,7 +452,7 @@ label
   display: flex
   overflow: hidden
   height: 100vh
-  width: 100vw
+  //width: 100vw
   .itemPhoto
     width: 100%
     height: 100%
@@ -436,6 +461,7 @@ label
     left: 0
     transition: 1s ease
     .smallBox
+      overflow: hidden
       position: relative
       .contentPhoto
         background-color: rgba(0,0,0,0)
@@ -449,18 +475,23 @@ label
         h2
           opacity: 1
           margin-top: 100px
-          margin-bottom: 50px
+          margin-bottom: 100px
           width: auto
           max-width: none
           text-align: center
           color: #ffffff
-        p
+        .contentPhotoBody
           transition: 0.5s ease 1s
           max-width: 1000px
           position: relative
           color: #fff
           opacity: 0
-          top: -300px
+          right: -300px
+          p
+            margin-bottom: 20px
+            .accentP
+              color: $ac-color
+              font-size: 24px
     img
       transition: 0.5s ease
       transform: translateX(-50%)
@@ -476,39 +507,97 @@ label
           height: 100%
           z-index: 2
           background-color: rgba(0,0,0,.8)
-          p
-            opacity: 1
-            top: 0
+          .contentPhotoBody
+            //opacity: 1
+            //top: 0
+            animation: pAnimationPhoto 0.5s ease-in 1s forwards
+@keyframes pAnimationPhoto
+  0%
+    right: -300px
+    opacity: 0
+  100%
+    right: 0
+    opacity: 1
+@keyframes photoBodyCenter
+  0%
+    top: -200px
+    opacity: 0
+  100%
+    top: 0
+    opacity: 1
+@keyframes photoBodyRight
+  0%
+    left: -300px
+    opacity: 0
+  100%
+    left: 0
+    opacity: 1
+.pricePhoto
+  margin-top: 5px
+  color: $ac-color
+  font-size: 30px
+  &:nth-child(4)
+    margin-top: 80px
+  span
+    color: $w-color
+    font-family: Comfort
+    font-size: 18px
+.showPhoto
+  margin-top: 80px
+  opacity: 1
+  padding: 11px 40px 10px
+  display: inline-block
+  cursor: pointer
+  background-color: $ac-color2
+  font-family: Comfort
+  border-radius: 5px
+  &:hover
+    animation: hoverAnimation2 0.5s cubic-bezier(0,.73,.47,1) forwards
 
 .default
   clip-path: polygon(0 100%, 16.5% 100%, 16.5% 0, 0 0)
-  p
+  h2
+    margin-left: -335px
+  .contentPhotoBody
     margin-left: 4.5%
     text-align: right
   &.active
     .smallBox
       .contentPhoto
-        background-color: rgba(0, 99, 10, 0.8) !important
+        background-color: rgba(12, 13, 25, 0.8) !important
     img
       transform: translateX(-30%)
 .premium
   clip-path: polygon(33.3% 100%, 66.6% 100%, 66.6% 0, 33.3% 0)
-  p
-    margin: 0 auto
-    text-align: center
   &.active
+    //.smallBox
+    //  .contentPhoto
+    .contentPhotoBody
+      animation: photoBodyCenter 0.5s ease 1s forwards !important
+  .contentPhotoBody
+    margin: 0 auto
+    right: 0 !important
+    text-align: center
+    .pricePhoto
+      &:nth-child(3)
+        margin-top: 80px
+      &:nth-child(4)
+        margin-top: auto
+
 .gold
   clip-path: polygon(83.25% 100%, 100% 100%, 100% 0, 83.25% 0)
   h2
-    margin-left: -220px
-  p
+    margin-left: 70px
+  .contentPhotoBody
     margin-left: 41%
   img
     transform: translateX(50%) !important
   &.active
+    .contentPhotoBody
+      animation: photoBodyRight 0.5s ease 1s forwards !important
     .smallBox
       .contentPhoto
-        background-color: rgba(84, 0, 2, 0.9) !important
+        background-color: rgba(30, 0, 2, 0.9) !important
     img
       transform: translateX(30%) !important
 .arrowBoxPhoto
@@ -520,10 +609,11 @@ label
     position: relative
     width: 100%
 .arrowLeftLeft, .arrowLeft, .arrowRightRight, .arrowRight
+  text-shadow: 0 0 8px rgba(0,0,0,.2)
   z-index: 1
   opacity: 0
   transition: 0.5s ease
-  font-size: 50px
+  font-size: 100px
   color: #fff
   transform: translateY(-50%)
   position: absolute
@@ -531,13 +621,177 @@ label
     opacity: 1
     z-index: 3
 .arrowLeftLeft
-  left: 270px
+  left: 200px
 .arrowLeft
-  left: 590px
+  left: 500px
 .arrowRightRight
-  right: 270px
+  right: 200px
 .arrowRight
-  right: 590px
+  right: 500px
+.streetPhoto
+  background-color: #000
+.photoBox
+  //display: flex
+  //flex-wrap: wrap
+  column-gap: 2.5px
+  column-count: 5
+  .item
+    max-width: 100%
+    margin-bottom: 3px
+    height: calc(100% / 5 - 5px)
+    width: 100%
+    overflow: hidden
+    cursor: pointer
+    img
+      width: 100%
+      transform: scale(1.1)
+      object-fit: cover
+      height: 100%
+      transition: 0.5s ease
+      &:hover
+        transform: scale(1.04)
+
+      //max-width: calc(100% / 5)
+.streetPhoto
+  .title
+    opacity: 1
+    padding: 50px 0px 30px
+    color: #fff
+    text-align: center
+    margin: 0 auto
+.modalPhoto
+  display: flex
+  align-items: center
+  justify-content: center
+  z-index: -1
+  position: fixed
+  top: 0
+  left: 0
+  bottom: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0,0,0,0)
+  transition: 0.3s ease
+  img
+    cursor: grabbing
+    transition: 0.3s ease
+    height: 10%
+    opacity: 0
+  &.show
+    background-color: rgba(0,0,0,0.9)
+    z-index: 9
+    img
+      opacity: 1
+      height: 90%
+.modalImgBox
+  width: 100%
+  height: 100%
+.dark
+  background-color: rgba(0,0,0,.9)
+
+// TRAINING
+.trainingGrid
+  padding: 5px
+  display: grid
+  grid-template-columns: 2fr 2fr 1fr 1fr 2fr
+  grid-template-rows: 1fr 1fr 2fr
+  grid-template-areas: 'a b c c c' 'a d c c c' 'e e l k m'
+  grid-column-gap: 5px
+  grid-row-gap: 5px
+  width: 100vw
+  height: 100vh
+
+.a
+  grid-area: a
+  .bgImage
+    background: linear-gradient( rgba(0, 149, 224, 0.74), transparent ), url('../img/training/1.jpg') no-repeat center
+.b
+  grid-area: b
+  .bgImage
+    background: linear-gradient(transparent, transparent ), url('../img/training/3.jpg') no-repeat center
+.c
+  grid-area: c
+  .bgImage
+    background: linear-gradient( rgba(231, 255, 0, 0.74), transparent ), url('../img/training/4.jpg') no-repeat center
+.d
+  .bgImage
+    background:  linear-gradient( rgba(145, 0, 224, 0.74), transparent ), url('../img/4.jpg') no-repeat center
+  grid-area: d
+.e
+  grid-area: e
+  .bgImage
+    background:  linear-gradient( rgba(255, 126, 39, 0.88), transparent ), url('../img/training/2.jpg') no-repeat center
+.l
+  grid-area: l
+  .bgImage
+    background:  linear-gradient( rgba(224, 0, 137, 0.74), transparent ), url('../img/training/2.jpg') no-repeat center
+.k
+  grid-area: k
+  .bgImage
+    background:  linear-gradient( rgba(0, 149, 224, 0.74), transparent ), url('../img/training/2.jpg') no-repeat center
+.m
+  grid-area: m
+  .bgImage
+    background:  linear-gradient( rgba(226, 0, 0, 0.74), transparent ), url('../img/training/2.jpg') no-repeat center
+
+.a, .b, .c, .d, .e, .l, .k, .m
+  position: relative
+  overflow: hidden
+  cursor: pointer
+  .extraText
+    position: absolute
+    display: flex
+    align-items: center
+    flex-direction: column
+    justify-content: flex-start
+    z-index: 1
+    bottom: -100%
+    width: 100%
+    left: 0
+    color: #000
+    height: 100%
+    transition: 0.3s ease
+    background-color: rgba(255,255,255,.95)
+    padding: 30px
+    .showPhoto
+      color: #fff
+      margin: 20px auto 0
+    .title
+      text-transform: uppercase
+      margin-top: 0
+      color: $ac-color
+      margin-bottom: 30px
+    .text
+      margin: 0 auto
+      max-width: 500px
+  &:hover
+    > .title
+      opacity: 0
+    .extraText
+      bottom: 0
+    .bgImage
+      transform: scale(1)
+  .bgImage
+    background-size: cover
+  .title
+    transition: 0.3s ease
+    margin-top: 1em
+    color: #fff
+    opacity: 1
+    text-align: center
+    font-size: 24px
+.bgImage
+  position: absolute
+  transition: 0.5s ease
+  top: 0
+  left: 0
+  width: 100%
+  z-index: -1
+  transform: scale(1.1)
+  height: 100%
+
+
+
 
 @import fonts
 @import media
