--- a/sass/main.sass
+++ b/sass/main.sass
@@ -331,7 +331,7 @@ nav
   0%
     box-shadow: 0 0 0 0px rgba($ac-color2, 0.8)
   100%
-    box-shadow: 0 0 0 10px rgba($ac-color2, 0)
+    box-shadow: 0 0 0 5px rgba($ac-color2, 0)
 
 // HAMBURGER
 input
@@ -927,13 +927,24 @@ label
 .trainingContent
   background-color: #ffffff
   margin-bottom: 30px
+  p
+    max-width: 600px
+    margin-bottom: 50px
+    line-height: 1.4
+    span
+      color: $ac-color2
+      text-transform: uppercase
+  .title.r
+    text-align: right
   .title
     opacity: 1
     font-family: MerriweatherBold
-    margin: 100px 0
+    padding: 100px 0
     color: #000
     span
       color: $ac-color
+.ta-r
+  text-align: right
 .textAccent
   font-family: MerriweatherBold
   margin-bottom: 30px
@@ -959,6 +970,47 @@ label
   width: 100%
   height: 100%
   z-index: 2
+.trainingBigBox
+  display: flex
+  justify-content: space-between
+  margin-bottom: 200px
+.svgFilter
+  max-height: 0
+.trainingPhoto
+  max-width:  400px
+  height: 400px
+  border-radius: 50%
+  overflow: hidden
+  img
+    width: 100%
+    height: 100%
+    object-fit: cover
+.preim
+  list-style: none
+  filter: url("#shadowed-goo")
+  li
+    padding: 10px 15px
+    background-color: $ac-color2
+    margin: 10px 0
+    font-family: Comfort
+    width: max-content
+    color: $w-color
+    border-radius: 20px
+    position: relative
+    &:hover
+      div
+        left: -50px
+        width: 20px
+    div
+      transition: 0.3s ease-out
+      position: absolute
+      top: 50%
+      left: -0px
+      transform: translateY(-50%)
+      width: 0px
+      height: 20px
+      border-radius: 50%
+      background-color: $ac-color2
 
 
 @import fonts
