--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -1,6 +1,7 @@
 @mixin font-face($font-family, $file-path, $weight: normal, $style: normal ) {
   @font-face {
     font-family: $font-family;
+    font-display: auto;
     font-weight: $weight;
     font-style: $style;
     src: url('#{$file-path}.ttf')
