--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1029,7 +1029,6 @@ label
   position: fixed
   bottom: -100px
   transition: 0.3s ease-out
-
   right: 30px
   width: 50px !important
   height: 50px
@@ -1050,6 +1049,128 @@ label
     //border: 15px solid transparent
     //box-sizing: border-box
     //border-bottom: 20px solid $ac-color
+.trainingPrice
+  background-color: #0e0e0e
+  color: #fff
+  padding: 200px 0 100px
+  .item
+    max-width: 400px
+    height: 500px
+    width: 100%
+    margin: 0 30px
+    position: relative
+    perspective: 1000px
+    .extraTitle
+      font-size: 18px
+      text-align: left
+      width: 100%
+      margin: 25px 25px 10px
+      font-weight: bold
+    .priceList
+      margin: 0 25px
+      list-style: none
+      li
+        font-family: Comfort
+        margin: 5px 0
+    &.hover
+      .front
+        animation: cardHover 0.5s ease-out forwards
+      .back
+        animation: cardBackHover 0.5s ease-out forwards
+    &.out
+      .front
+        animation: cardOut 0.5s ease-out forwards
+      .back
+        animation: cardBackOut 0.5s ease-out forwards
+    &.pers
+      top: -100px
+      .front
+        //clip-path: url(#appleClip)
+        color: $text-color
+        background-color: #fff
+        .title
+          background-color: $ac-color
+          color: $w-color
+      .back
+        //clip-path: url(#appleClip)
+        background-color: #000
+    &.your
+      transform: rotate(-10deg)
+      .front
+        background: #fff
+        color: $text-color
+        .title
+          background-color: $ac-color2
+          color: $w-color
+      .back
+        background-color: #000
+    &.my
+      transform: rotate(10deg)
+      .front
+        background: #fff
+        color: $text-color
+        .title
+          background-color: gold
+          color: $w-color
+      .back
+        background-color: #000
+    .front, .back
+      overflow: hidden
+      border-radius: 5px
+      .text
+        padding: 0 25px
+        margin-bottom: 10px
+      .title
+        text-shadow: 0px 1px 0px rgba(0,0,0,0.2)
+        padding: 30px 0 40px
+        width: 100%
+        clip-path: url(#clipTitle)
+        text-align: center
+        margin-bottom: 30px
+        font-size: 24px
+        text-transform: uppercase
+      padding: 0
+      position: absolute
+      width: 100%
+      height: 100%
+      left: 0
+      top: 0
+      display: flex
+      justify-content: flex-start
+      align-items: flex-start
+      flex-direction: column
+      transition: 0.5s
+      backface-visibility: hidden
+    .back
+      transform: rotateY(180deg)
+@keyframes cardHover
+  0%
+    transform: rotateY(0) skew(0)
+  100%
+    transform: rotateY(180deg) scale(1) skew(30deg)
+@keyframes cardOut
+  0%
+    transform: rotateY(180deg) scale(1) skew(30deg)
+  100%
+    transform: rotateY(0) skew(0)
+@keyframes cardBackHover
+  0%
+    transform: rotateY(180deg) scale(1) skew(-30deg)
+  100%
+    transform: rotateY(360deg) skew(0)
+@keyframes cardBackOut
+  0%
+    transform: rotateY(360deg) skew(0)
+  100%
+    transform: rotateY(180deg) scale(1) skew(-30deg)
+
+.clipPathCard
+  height: 0px
+  width: 0
+.container
+  max-width: 1170px
+  margin: 0 auto
+  display: flex
 
 @import fonts
 @import media
