--- a/sass/main.sass
+++ b/sass/main.sass
@@ -734,7 +734,7 @@ label
     .title
       font-size: 18px !important
   .bgImage
-    background: linear-gradient(rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74)), url('../img/training/3.jpg') no-repeat center
+    background: linear-gradient(rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74)), url('../img/training/7.jpg') no-repeat center
 .c
   grid-area: c
   > .title
@@ -792,7 +792,7 @@ label
       text-align: left !important
       font-size: 18px !important
   .bgImage
-    background:  linear-gradient( rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74) ), url('../img/training/2.jpg') no-repeat center
+    background:  linear-gradient( rgba(0, 149, 224, 0.74), rgba(0, 149, 224, 0.74) ), url('../img/training/6.jpg') no-repeat center
 .m
   > .title
     animation: animM 3s ease-out
@@ -803,7 +803,7 @@ label
   .extraText
     left: -100%
   .bgImage
-    background:  linear-gradient( rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74) ), url('../img/training/2.jpg') no-repeat center
+    background:  linear-gradient( rgba(226, 0, 0, 0.74), rgba(226, 0, 0, 0.74) ), url('../img/training/8.jpg') no-repeat center
 @keyframes animA
   0%
     opacity: 0
@@ -986,7 +986,11 @@ label
   height: 400px
   border-radius: 50%
   overflow: hidden
+  &:hover
+    img
+      transform: scale(1.05)
   img
+    transition: 1s ease-out
     width: 100%
     height: 100%
     object-fit: cover
@@ -1050,28 +1054,33 @@ label
     //box-sizing: border-box
     //border-bottom: 20px solid $ac-color
 .trainingPrice
-  background-color: #0e0e0e
+  background-color: #fff
+  position: relative
   color: #fff
   padding: 200px 0 100px
   .item
     max-width: 400px
-    height: 500px
+    min-height: 550px
+    height: max-content
+    cursor: pointer
     width: 100%
     margin: 0 30px
     position: relative
     perspective: 1000px
     .extraTitle
       font-size: 18px
-      text-align: left
+      text-align: center
       width: 100%
-      margin: 25px 25px 10px
+      margin: 25px 0 15px
       font-weight: bold
     .priceList
-      margin: 0 25px
       list-style: none
       li
+        background-color: rgba(253, 51, 189, 0.13)
+        padding: 10px 25px
         font-family: Comfort
-        margin: 5px 0
+        &:nth-child(2n)
+          background-color: white
     &.hover
       .front
         animation: cardHover 0.5s ease-out forwards
@@ -1091,30 +1100,30 @@ label
         .title
           background-color: $ac-color
           color: $w-color
-      .back
-        //clip-path: url(#appleClip)
-        background-color: #000
     &.your
       transform: rotate(-10deg)
+      min-height: 400px
       .front
         background: #fff
         color: $text-color
         .title
           background-color: $ac-color2
           color: $w-color
-      .back
-        background-color: #000
+      .front, .back
+       box-shadow: -1px 1px 3px rgba(0,0,0,.2), -3px 14px 18px rgba(0,0,0,0.1)
     &.my
       transform: rotate(10deg)
+      min-height: 300px
       .front
         background: #fff
         color: $text-color
         .title
           background-color: gold
           color: $w-color
-      .back
-        background-color: #000
+      .front, .back
+        box-shadow: 1px 1px 3px rgba(0,0,0,.2), 3px 14px 18px rgba(0,0,0,0.1)
     .front, .back
+      box-shadow: 0 1px 3px rgba(0,0,0,.2), 0 14px 18px rgba(0,0,0,0.1)
       overflow: hidden
       border-radius: 5px
       .text
@@ -1142,7 +1151,36 @@ label
       transition: 0.5s
       backface-visibility: hidden
     .back
+      background-color: #000
       transform: rotateY(180deg)
+      display: flex
+      align-items: center
+      justify-content: center
+      padding: 0 25px
+      div
+        flex-direction: column
+        display: flex
+        align-items: center
+        justify-content: center
+        margin-bottom: 30px
+        font-size: 14px
+        text-align: center
+        span
+          display: block
+          font-size: 24px
+          color: $ac-color
+#Слой_1
+  height: 0
+.absoluteDescription
+  display: none
+  color: #000
+  font-family: Comfort
+  text-align: center
+  position: absolute
+  top: 30px
+  font-size: 14px
+  left: 50%
+  transform: translateX(-50%)
 @keyframes cardHover
   0%
     transform: rotateY(0) skew(0)
