--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -230,13 +230,13 @@
       left: auto
       right: 0
       width: 100%
-  .nav
+  nav
     justify-content: center
     .item
       left: auto
-      right: -50px
-    a
       text-align: center
+      display: flex
+      justify-content: center
   .menu
     position: relative
     z-index: 13
